feat(pgbulk): add retry with filtered df for pg output write (#10)